--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 Best & free guide of responsive web design
 ">
 <!-- ссылка на изображение, которое будет публиковаться в записи -->
-<meta property="og:image" content="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.istockphoto.com%2Fphotos%2Fmoney-rain-picture-id117832694%3Fs%3D612x612&imgrefurl=https%3A%2F%2Fwww.istockphoto.com%2Fphoto%2Fmoney-rain-gm117832694-8715943&tbnid=LPCybW-0Hcrt4M&vet=12ahUKEwjX2LKn_af1AhVx-IsKHQUQAOsQMygnegUIARChAg..i&docid=UYHyGiwOLiGgtM&w=612&h=267&itg=1&q=MoneyRain&ved=2ahUKEwjX2LKn_af1AhVx-IsKHQUQAOsQMygnegUIARChAg">
+<meta property="og:image" content="https://mymoneyrain.com/img/welcome-cat.png">
 <!-- ссылка на текущую страницу -->
 <meta property="og:url" content="">
 <!-- название сайта -->
