--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 Best & free guide of responsive web design
 ">
 <!-- ссылка на изображение, которое будет публиковаться в записи -->
-<meta property="og:image" content="https://mymoneyrain.com/img/welcome-cat.png">
+<meta property="og:image" content="https://mymoneyrain.com/img/welcome-game.png">
 <!-- ссылка на текущую страницу -->
 <meta property="og:url" content="">
 <!-- название сайта -->
